# MessageBusIPC

./: .gitignore  CMakeLists.txt  run_multiple_clients.sh  run_performance_test.sh
message_bus_ipc_demo/: CMakeLists.txt
message_bus_ipc_demo/source/: client.cpp  hub.cpp
message_bus_ipc_lib/: CMakeLists.txt
message_bus_ipc_lib/source/: BlockingMessageQueue.cpp  BlockingMessageQueue.h  MessageBusIpcCommon.cpp  MessageBusIpcCommon.h  MessageChannel.cpp  MessageChannel.h  MessageClient.cpp  MessageClient.h  MessageHub.cpp  MessageHub.h  MessageServer.cpp  MessageServer.h  PThreadLockGuard.cpp  PThreadLockGuard.h  Server.cpp  Server.h  SynchronizedChannelList.cpp  SynchronizedChannelList.h  ThreadsafeChannelList.cpp  ThreadsafeChannelList.h  ThreadsafeClientList.cpp  ThreadsafeClientList.h  ThreadsafeMessageQueue.cpp  ThreadsafeMessageQueue.h
message_bus_ipc_performance_test/: CMakeLists.txt
message_bus_ipc_performance_test/source/: client.cpp  hub.cpp
